logs/nightly/pytest_rerun2.txt

=================================== ERRORS ====================================
___________ ERROR collecting src/tests/test_hallandale_pipeline.py ____________
ImportError while importing test module 'C:\Code\bar-directory-recon\src\tests\test_hallandale_pipeline.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\ProgramData\miniconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
src\tests\test_hallandale_pipeline.py:1: in <module>
    from hallandale_pipeline import HallandalePipeline  # type: ignore
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
src\hallandale_pipeline.py:20: in <module>
    from property_validation import PropertyValidation  # noqa: E402
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
src\property_validation.py:14: in <module>
    import dns.resolver
E   ModuleNotFoundError: No module named 'dns'
_______ ERROR collecting src/tests/test_hallandale_pipeline_success.py ________
ImportError while importing test module 'C:\Code\bar-directory-recon\src\tests\test_hallandale_pipeline_success.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\ProgramData\miniconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
src\tests\test_hallandale_pipeline_success.py:1: in <module>
    from hallandale_pipeline import HallandalePipeline  # type: ignore
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
src\hallandale_pipeline.py:20: in <module>
    from property_validation import PropertyValidation  # noqa: E402
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
src\property_validation.py:14: in <module>
    import dns.resolver
E   ModuleNotFoundError: No module named 'dns'
________________ ERROR collecting test_hallandale_pipeline.py _________________
ImportError while importing test module 'C:\Code\bar-directory-recon\test_hallandale_pipeline.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\ProgramData\miniconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
test_hallandale_pipeline.py:14: in <module>
    from property_validation import PropertyValidation
src\property_validation.py:14: in <module>
    import dns.resolver
E   ModuleNotFoundError: No module named 'dns'
___________________ ERROR collecting test_live_scraping.py ____________________
ImportError while importing test module 'C:\Code\bar-directory-recon\test_live_scraping.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\ProgramData\miniconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
test_live_scraping.py:15: in <module>
    from tools.realtor_directory_scraper import scrape_realtor_directory  # noqa: E402
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   ImportError: cannot import name 'scrape_realtor_directory' from 'tools.realtor_directory_scraper' (C:\Code\bar-directory-recon\tools\realtor_directory_scraper.py)
___________________ ERROR collecting test_realtor_system.py ___________________
.venv-ci\Lib\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
.venv-ci\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\ProgramData\miniconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv-ci\Lib\site-packages\_pytest\assertion\rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv-ci\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\ProgramData\miniconda3\Lib\ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "C:\Code\bar-directory-recon\test_realtor_system.py", line 25
E       try:
E       ^^^
E   SyntaxError: expected 'except' or 'finally' block
_______________ ERROR collecting tests/test_security_manager.py _______________
import file mismatch:
imported module 'test_security_manager' has this __file__ attribute:
  C:\Code\bar-directory-recon\src\tests\test_security_manager.py
which is not the same as the test file we want to collect:
  C:\Code\bar-directory-recon\tests\test_security_manager.py
HINT: remove __pycache__ / .pyc files and/or use a unique basename for your test file modules
============================== warnings summary ===============================
universal_recon\tests\analytics\test_plugin_usage_diff.py:14
  C:\Code\bar-directory-recon\universal_recon\tests\analytics\test_plugin_usage_diff.py:14: PytestUnknownMarkWarning: Unknown pytest.mark.analytics - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html
    @pytest.mark.analytics

universal_recon\tests\analytics\test_risk_overlay_emitter.py:18
  C:\Code\bar-directory-recon\universal_recon\tests\analytics\test_risk_overlay_emitter.py:18: PytestUnknownMarkWarning: Unknown pytest.mark.analytics - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html
    @pytest.mark.analytics

.venv-ci\Lib\site-packages\_pytest\cacheprovider.py:475
  C:\Code\bar-directory-recon\.venv-ci\Lib\site-packages\_pytest\cacheprovider.py:475: PytestCacheWarning: could not create cache path C:\Code\bar-directory-recon\.pytest_cache\v\cache\nodeids: [WinError 5] Access is denied: 'C:\\Code\\bar-directory-recon\\.pytest_cache\\v\\cache'
    config.cache.set("cache/nodeids", sorted(self.cached_nodeids))

.venv-ci\Lib\site-packages\_pytest\cacheprovider.py:429
  C:\Code\bar-directory-recon\.venv-ci\Lib\site-packages\_pytest\cacheprovider.py:429: PytestCacheWarning: could not create cache path C:\Code\bar-directory-recon\.pytest_cache\v\cache\lastfailed: [WinError 5] Access is denied: 'C:\\Code\\bar-directory-recon\\.pytest_cache\\v\\cache'
    config.cache.set("cache/lastfailed", self.lastfailed)

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
- generated xml file: C:\Code\bar-directory-recon\logs\nightly\junit_rerun2.xml -
=========================== short test summary info ===========================
ERROR src/tests/test_hallandale_pipeline.py
ERROR src/tests/test_hallandale_pipeline_success.py
ERROR test_hallandale_pipeline.py
ERROR test_live_scraping.py
ERROR test_realtor_system.py
ERROR tests/test_security_manager.py
!!!!!!!!!!!!!!!!!!! Interrupted: 6 errors during collection !!!!!!!!!!!!!!!!!!!
5 deselected, 4 warnings, 6 errors in 3.86s
